--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,9 @@
         "preferred-install": {
             "*": "dist"
         },
+        "platform": {
+            "php": "7.3.12"
+          },
         "sort-packages": true
     },
     "autoload": {
